src/tests/lexical_analysis_error/invalid_string_expression/snapshots/monkey_interpreter__tests__lexical_analysis_error__invalid_string_expression__test_invalid_string_expression_case_1_lexical_analysis_error.snap
---
source: src/tests/lexical_analysis_error/invalid_string_expression/mod.rs
assertion_line: 18
expression: error
---
Err(
    "String starting at line 1, column 1 not closed before the end of the code.",
)
