src/tests/lexical_analysis_error/invalid_string_expression/snapshots/monkey_interpreter__tests__lexical_analysis_error__invalid_string_expression__test_invalid_string_expression_case_2_lexical_analysis_error.snap
---
source: src/tests/lexical_analysis_error/invalid_string_expression/mod.rs
assertion_line: 18
expression: error
---
Err(
    "Unparsable context for lexical analysis \"'this\" at line 1, column 1.",
)
